--- a/OasisFamiliarWebSite/Views/Shared/_LayoutCustomer.cshtml
+++ b/OasisFamiliarWebSite/Views/Shared/_LayoutCustomer.cshtml
@@ -14,6 +14,15 @@
     @Scripts.Render("~/bundles/modernizr")
 
     <style>
+
+        .footer {
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            text-align: right;
+        }
+
         .filterDiv {
             display: none;
         }
@@ -61,16 +70,6 @@
                 color: #fff;
           }
 
-        footer {
-            position: absolute;
-            right: 0;
-            bottom: 0;
-            left: 0;
-            padding: 1rem;
-            background-color: #efefef;
-            text-align: center;
-        }
-
         .opciones {
             height: 200px;
             position: relative;
@@ -85,13 +84,11 @@
             transform: translate(-50%, -50%);
         }
 
-
-
     </style>
 
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top navbar-light" style="        background-color: #800000;">
+    <div class="navbar navbar-inverse navbar-fixed-top navbar-light" style=" background-color: #800000;">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -115,13 +112,12 @@
 
     <div class="container body-content">
         @RenderBody()
-
-        
-        <footer>
-            <hr />
-            <p>&copy; @DateTime.Now.Year - Siveresoft-UTEC</p>
-        </footer>
     </div>
+
+    <footer class="footer fixed-bottom">
+        <hr />
+        <p>&copy; @DateTime.Now.Year - Siveresoft-UTEC</p>
+    </footer>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
