--- a/OasisFamiliarWebSite/Views/Customer/Index.cshtml
+++ b/OasisFamiliarWebSite/Views/Customer/Index.cshtml
@@ -8,8 +8,6 @@
 
 
 <h2 style="text-align:center;">Bienvenido al Oasis Familiar</h2>
-@*<h3 style="text-align:center;">@HttpContext.Current.Session["Usuario"].ToString()</h3>*@
-
 <h3 style="text-align:center;">@ViewBag.Data.Nombre_Usuario</h3>
 
 <div style="text-align:center">
@@ -32,12 +30,10 @@
 
 <div class="opciones">
     <div class="btn-group-vertical center">
-
-            <button type="button" class="btn btn-primary btn-outline" > Revisar facturar</button>
+            <button type="button" class="btn btn-primary btn-outline" onclick="location.href='@Url.Action("VerFactura", "Customer", new { item = ViewBag.Data.FacturaActual})'"> Revisar facturar</button>
             <button type="button" class="btn btn-primary btn-outline" onclick="location.href='@Url.Action("MenuPage", "Customer", new { item = ViewBag.Data.FacturaActual})'">Ordenar</button>
             <button type="button" class="btn btn-primary btn-outline">Llamar la mesero</button>
             <button type="button" class="btn btn-danger btn-outline" >Pagar</button>
-
     </div>
 </div>
 
