--- a/OasisFamiliarWebSite/Views/Customer/MenuPage.cshtml
+++ b/OasisFamiliarWebSite/Views/Customer/MenuPage.cshtml
@@ -5,11 +5,13 @@
     Layout = "~/Views/Shared/_LayoutCustomer.cshtml";
 }
 
+
 <div class="contenido">
     <div style="text-align:center;">
         <h2 style="font-weight:bold">ORDENAR AHORA</h2>
-        <p>Factura #: @ViewBag.Message</p>
+        <h4>Factura : <span class="entry-title">@ViewBag.Message</span></h4>
     </div>
+
 
     <div style="float:inherit">
         <div id="myBtnContainer" class="btn-group" style="margin: auto; display: flex; flex-direction: row; justify-content: center;">
@@ -24,7 +26,7 @@
     <div id="myModal" class="modal fade" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
-                <form method="post" action="@Url.Action("MenuPage", "Receptionist")">
+                <form method="post" action="@Url.Action("MenuPage", "Customer")">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                         <h4 class="modal-title">Establecer detalle en Orden</h4>
@@ -38,15 +40,15 @@
                             </tr>
                             <tr>
                                 <td><p>Cantidad:</p></td>
-                                <td><input type="number" class="form-control" id="Cantidad" name="Cantidad" min="1" max="5" value="1"></td>
+                                <td><input type="number" class="form-control" id="cantidad" name="cantidad" min="1" max="5" value="1"></td>
                             </tr>
                         </table>
                     </div>
                     <div class="modal-footer">
                         <div>
 
-                            <input type="hidden" id="Id_Menu" name="Id_Menu" class="edit_id">
-                            <input type="hidden" id="Mesa" name="Mesa" class="edit_idFactura">
+                            <input type="hidden" id="idMenu" name="idMenu" class="edit_id">
+                            <input type="hidden" id="idfactura" name="idfactura" class="edit_idFactura">
                         </div>
 
                         <button type="button" class="btn btn-warning" data-dismiss="modal">Cerrar</button>
@@ -142,7 +144,6 @@
     <!-- Fin del Contenido del menu -->
 
 </div>
-
 <!--Codigo para tomar valor de la tabla-->
 <script>
     $(document).on("click", '.edit_button', function (e) {
@@ -170,6 +171,8 @@
 
 
 </script>
+
+
 <script>
     filterSelection("all")
     function filterSelection(c) {
