--- a/OasisFamiliarWebSite/Views/Customer/Cuenta.cshtml
+++ b/OasisFamiliarWebSite/Views/Customer/Cuenta.cshtml
@@ -1,19 +1,19 @@
 ﻿@model OasisFamiliarWebSite.Models.CuentaVM
 
 @{
-    ViewBag.Title = "Cuenta";
+
     Layout = "~/Views/Shared/_LayoutCustomer.cshtml";
 }
 
-<h2>Cuenta</h2>
+<h2>Actualizaón</h2>
 
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+<div class="container">
     <div class="form-horizontal">
-        <h4>CuentaVM</h4>
+        <h4>Configuración de Cuenta</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.idUsuario)
@@ -34,15 +34,7 @@
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Promociones, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.Promociones)
-                    @Html.ValidationMessageFor(model => model.Promociones, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
+        <hr />
 
         <div class="form-group">
             @Html.LabelFor(model => model.Correo, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -51,17 +43,26 @@
                 @Html.ValidationMessageFor(model => model.Correo, "", new { @class = "text-danger" })
             </div>
         </div>
-
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+            <div class="col-md-10">
+                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                <label class="form-check-label" for="flexCheckDefault">
+                    Default checkbox
+                </label>
+            </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Actualizar" class="btn btn-default" />
+                </div>
             </div>
         </div>
-    </div>
+</div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Ir a Inicio", "Index")
 </div>
 
 @section Scripts {
