--- a/OasisFamiliarWebSite/Views/Customer/Index.cshtml
+++ b/OasisFamiliarWebSite/Views/Customer/Index.cshtml
@@ -30,10 +30,18 @@
 
 <div class="opciones">
     <div class="btn-group-vertical center">
-            <button type="button" class="btn btn-primary btn-outline" onclick="location.href='@Url.Action("VerFactura", "Customer", new { item = ViewBag.Data.FacturaActual})'"> Revisar facturar</button>
-            <button type="button" class="btn btn-primary btn-outline" onclick="location.href='@Url.Action("MenuPage", "Customer", new { item = ViewBag.Data.FacturaActual})'">Ordenar</button>
-            <button type="button" class="btn btn-primary btn-outline">Llamar la mesero</button>
-            <button type="button" class="btn btn-danger btn-outline" >Pagar</button>
+        @{ if (ViewBag.Data.EstadoCuenta != 0)
+            {
+                <button type="button" class="btn btn-primary btn-outline" onclick="location.href='@Url.Action("VerFactura", "Customer", new { item = ViewBag.Data.FacturaActual })'"> Revisar facturar</button>
+                <button type="button" class="btn btn-primary btn-outline" onclick="location.href='@Url.Action("MenuPage", "Customer", new { item = ViewBag.Data.FacturaActual })'">Ordenar</button>
+                <button type="button" class="btn btn-danger btn-outline">Pagar</button>
+            }
+            else
+            {
+                <button type="button" class="btn btn-primary btn-outline" onclick="location.href='@Url.Action("MenuPage", "Customer", new { item = ViewBag.Data.FacturaActual})'">Menú</button>
+            }
+        }
+        <button type="button" class="btn btn-primary btn-outline">Llamar la mesero</button>
     </div>
 </div>
 
