--- a/OasisFamiliarWebSite/Views/Admin/Index.cshtml
+++ b/OasisFamiliarWebSite/Views/Admin/Index.cshtml
@@ -1,7 +1,150 @@
-﻿
+﻿@model IEnumerable<Model.DataModel.Promociones>
+
 @{
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<!--Modal Nueva promocion information-->
+<div id="myModal" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <form method="post" action="@Url.Action("MenuPage", "Receptionist")">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Establecer detalle en Orden</h4>
+                </div>
+                <div class="modal-body">
 
+                    <table style="width:100%">
+                        <tr>
+                            <th> <p id="edit_nombre"></p></th>
+                            <th> <p>Precio : $ <span id="edit_precio"></span></p></th>
+                        </tr>
+                        <tr>
+                            <td><p>Cantidad:</p></td>
+                            <td><input type="number" class="form-control" id="Cantidad" name="Cantidad" min="1" max="5" value="1"></td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="modal-footer">
+                    <div>
+
+                        <input type="hidden" id="Id_Menu" name="Id_Menu" class="edit_id">
+                        <input type="hidden" id="Mesa" name="Mesa" class="edit_idFactura">
+                    </div>
+
+                    <button type="button" class="btn btn-warning" data-dismiss="modal">Cerrar</button>
+                    <input type="submit" value="Agregar" class="btn btn-success" />
+
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+<!--Modal Editar information-->
+<div id="myModal" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <form method="post" action="@Url.Action("MenuPage", "Receptionist")">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Establecer detalle en Orden</h4>
+                </div>
+                <div class="modal-body">
+
+                    <table style="width:100%">
+                        <tr>
+                            <th> <p id="edit_nombre"></p></th>
+                            <th> <p>Precio : $ <span id="edit_precio"></span></p></th>
+                        </tr>
+                        <tr>
+                            <td><p>Cantidad:</p></td>
+                            <td><input type="number" class="form-control" id="Cantidad" name="Cantidad" min="1" max="5" value="1"></td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="modal-footer">
+                    <div>
+
+                        <input type="hidden" id="Id_Menu" name="Id_Menu" class="edit_id">
+                        <input type="hidden" id="Mesa" name="Mesa" class="edit_idFactura">
+                    </div>
+
+                    <button type="button" class="btn btn-warning" data-dismiss="modal">Cerrar</button>
+                    <input type="submit" value="Agregar" class="btn btn-success" />
+
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+
+
+<h2>Promociones Oasis Familiar</h2>
+
+
+
+
+<table class="table">
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.fechaInicio)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.fechaFin)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Descripcion)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Active)
+        </th>
+    </tr>
+
+    @{if (Model != null)
+        {
+
+            foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.fechaInicio)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.fechaFin)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Descripcion)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Active)
+                    </td>
+                    <td>
+                        @Html.ActionLink("Edit", "Edit", new { id = item.idPromociones }) |
+                        @Html.ActionLink("Details", "Details", new { id = item.idPromociones }) |
+                        @Html.ActionLink("Delete", "Delete", new { id = item.idPromociones })
+                    </td>
+                </tr>
+            }
+
+
+        }
+        else
+        {
+
+            <tr>
+                <td>
+                    <h1>No hay promociones disponibles</h1>
+                    <button>Create nueva Promocion</button>
+                </td>
+            </tr>
+
+        }
+
+
+
+    }
+
+</table>
