--- a/OasisFamiliarWebSite/Views/Shared/_LayoutAdmin.cshtml
+++ b/OasisFamiliarWebSite/Views/Shared/_LayoutAdmin.cshtml
@@ -93,7 +93,7 @@
 
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top navbar-light" style=" background-color: #B0E0E6;">
+    <div class="navbar navbar-inverse navbar-fixed-top navbar-light" style="        background-color: #1F0B29;">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
