--- a/OasisFamiliarWebSite/Views/Admin/CrearPromo.cshtml
+++ b/OasisFamiliarWebSite/Views/Admin/CrearPromo.cshtml
@@ -1,10 +1,11 @@
 ﻿@model OasisFamiliarWebSite.Models.PromoMV
 
 @{
-    ViewBag.Title = "NewPromo";
+    ViewBag.Title = "CrearPromo";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h2>NewPromo</h2>
+<h2>Crear Nueva Promoción</h2>
 
 @using (Html.BeginForm()) 
 {
@@ -17,7 +18,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.fechaInicio, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.fechaInicio, new { htmlAttributes = new { @class = "form-control" } })
+                <input type="date" id="fechaInicio" name="fechaInicio" class="form-control" />
                 @Html.ValidationMessageFor(model => model.fechaInicio, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -25,8 +26,16 @@
         <div class="form-group">
             @Html.LabelFor(model => model.fechaFin, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.fechaFin, new { htmlAttributes = new { @class = "form-control" } })
+                <input type="date" id="fechaFin" name="fechaFin" class="form-control" />
                 @Html.ValidationMessageFor(model => model.fechaFin, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Titulo, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Titulo, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Titulo, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -39,11 +48,11 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Active, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Activar, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div class="checkbox">
-                    @Html.EditorFor(model => model.Active)
-                    @Html.ValidationMessageFor(model => model.Active, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.Activar)
+                    @Html.ValidationMessageFor(model => model.Activar, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
@@ -55,6 +64,9 @@
         </div>
     </div>
 }
+
+<h2>@ViewBag.Message</h2>
+
 
 <div>
     @Html.ActionLink("Back to List", "Index")
