--- a/OasisFamiliarWebSite/Views/Customer/Cuenta.cshtml
+++ b/OasisFamiliarWebSite/Views/Customer/Cuenta.cshtml
@@ -17,6 +17,7 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.idUsuario)
+        @Html.HiddenFor(model => model.Password)
 
         <div class="form-group">
             @Html.LabelFor(model => model.Nombre_Usuario, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -26,13 +27,6 @@
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
         <hr />
 
@@ -44,22 +38,24 @@
             </div>
         </div>
         <div class="form-group">
+            @Html.LabelFor(model => model.Promociones, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                <label class="form-check-label" for="flexCheckDefault">
-                    Default checkbox
-                </label>
-            </div>
-            </div>
-
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Actualizar" class="btn btn-default" />
-                </div>
+                @Html.EditorFor(model => model.Promociones, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Promociones, "", new { @class = "text-danger" })
             </div>
         </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Actualizar" class="btn btn-default" />
+            </div>
+        </div>
+    </div>
 </div>
 }
+
+
+<h3>@ViewBag.Message</h3>
 
 <div>
     @Html.ActionLink("Ir a Inicio", "Index")
