colocacion de layout correctos y se implemento el cerrar sesion

--- a/OasisFamiliarWebSite/Views/Customer/MenuPage.cshtml
+++ b/OasisFamiliarWebSite/Views/Customer/MenuPage.cshtml
@@ -83,6 +83,7 @@
                     <hr />
                     <div class="col-xs-18 col-sm-6 col-md-4">
                         <div class="thumbnail">
+                            <img src="~/Content/img/Menu/Valde.jpg" />
                             <img src="http://placehold.it/500x300" alt="">
                             <div class="caption">
                                 <h4>@item.nombre_Producto</h4>
@@ -103,6 +104,7 @@
                     <div class="filterDiv @item.Tipo_Producto">
                         <div class="col-xs-18 col-sm-6 col-md-4">
                             <div class="thumbnail">
+                                <img src="~/Content/img/Menu/pilsener-1000x1000.jpg" />
                                 <img src="http://placehold.it/500x300" alt="">
                                 <div class="caption">
                                     <h4>@item.nombre_Producto</h4>
@@ -123,6 +125,8 @@
                         <hr />
                         <div class="col-xs-18 col-sm-6 col-md-4">
                             <div class="thumbnail">
+
+                                <img src="~/Content/img/Menu/sopa de torilla.jpg" />
                                 <img src="http://placehold.it/500x300" alt="">
                                 <div class="caption">
                                     <h4>@item.nombre_Producto</h4>
