--- a/OasisFamiliarWebSite/Views/Shared/_LayoutAdmin.cshtml
+++ b/OasisFamiliarWebSite/Views/Shared/_LayoutAdmin.cshtml
@@ -101,7 +101,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Oasis Familiar ", "Index", "Customer", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Oasis Familiar ", "Index", "admin", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
 
