--- a/OasisFamiliarWebSite/Views/Shared/_LayoutCooker.cshtml
+++ b/OasisFamiliarWebSite/Views/Shared/_LayoutCooker.cshtml
@@ -79,7 +79,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Orden", "Ordenes", "Cooker")</li>
-                   
+                    <li>@Html.ActionLink("Salir", "Salir", "Account")</li>
+
                 </ul>
 
             </div>
