--- a/OasisFamiliarWebSite/Views/Cooker/Ordenes.cshtml
+++ b/OasisFamiliarWebSite/Views/Cooker/Ordenes.cshtml
@@ -49,3 +49,7 @@
     <button type="button" class="btn btn-danger " data-target="cancelado">Cancelar Factura</button>
     <button type="button" class="btn btn-warning" data-target="all">Pago Pendiente</button>
 </div>
+<div class="btn-group" contextmenu="">
+    <button type="button" class="btn btn-danger " data-target="pagado"> Cerrar Sesion</button>
+   
+</div>
