--- a/OasisFamiliarWebSite/Views/Shared/_LayoutCustomer.cshtml
+++ b/OasisFamiliarWebSite/Views/Shared/_LayoutCustomer.cshtml
@@ -104,7 +104,7 @@
                     <li>@Html.ActionLink("Menu", "Index", "Customer")</li>
                     <li>@Html.ActionLink("Factura", "Index", "Customer")</li>
                     <li>@Html.ActionLink("Configuración", "Cuenta", "Customer")</li>
-                    <li>@Html.ActionLink("Salir", "Contact", "Receptionist")</li>
+                    <li>@Html.ActionLink("Salir", "Salir", "Account")</li>
                 </ul>
 
             </div>
