--- a/OasisFamiliarWebSite/Views/Account/Register.cshtml
+++ b/OasisFamiliarWebSite/Views/Account/Register.cshtml
@@ -1,50 +1,107 @@
 ﻿@model OasisFamiliarWebSite.Models.RegisterVM
 
 @{
-    Layout = "~/Views/Shared/_LayoutReceptionist.cshtml";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
+
 
 <!DOCTYPE html>
 
 <html>
+
 <head>
+
+    
+    <link rel="stylesheet"
+          href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+          integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+          crossorigin="anonymous" />
     <meta name="viewport" content="width=device-width" />
-    <title>Register</title>
+
+    <style>
+        * {
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            background-color: rgb(235, 230, 230);
+        }
+
+        .row {
+            background: white;
+            border-radius: 3px;
+            box-shadow: 12px 12px 22px grey;
+        }
+
+        .btn1 {
+            border: none;
+            outline: none;
+            height: 50px;
+            width: 100%;
+            background-color: black;
+            color: white;
+            border-radius: 4px;
+            font-weight: bold;
+        }
+
+            .btn1:hover {
+                background: white;
+                border: 1px solid;
+                color: black;
+            }
+    </style>
 </head>
 <body>
+
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jqueryval")
 
 
     @using (Html.BeginForm())
     {
-        @Html.AntiForgeryToken()
+            @Html.AntiForgeryToken()
 
-        <div class="form-horizontal">
-            <h4>RegisterVM</h4>
+        <div >
+            <h4>Crear Usuarios</h4>
             <hr />
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group">
-                @Html.LabelFor(model => model.Nombre_Usuario, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Nombre_Usuario, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Nombre_Usuario, "", new { @class = "text-danger" })
+            <form>
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Nombre_Usuario, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Nombre_Usuario, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Nombre_Usuario, "", new { @class = "text-danger" })
+                    </div>
                 </div>
-            </div>
 
-            <div class="form-group">
-                @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                    </div>
                 </div>
-            </div>
 
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Crear Registro" class="btn btn-default" />
+                <div class="form-group">
+                   
+                    <div class="col-md-10">
+                        rol
+                        <select class="form-control form-control-sm">
+                            <option>Cliente</option>
+                            <option>Cocinero</option>
+                            <option>Mesero</option>
+                        </select>
+                    </div>
                 </div>
-            </div>
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="Crear Registro" class="btn btn-primary" />
+                    </div>
+                </div>
+
+            </form>
         </div>
      }
 </body>
