--- a/OasisFamiliarWebSite/Views/Shared/_LayoutReceptionist.cshtml
+++ b/OasisFamiliarWebSite/Views/Shared/_LayoutReceptionist.cshtml
@@ -15,6 +15,9 @@
     @Scripts.Render("~/bundles/modernizr")
 
     <style>
+        .thumbnail > img {
+            width: 200px !important;
+        }
     .filterDiv {
         display: none;
     }
