--- a/OasisFamiliarWebSite/Views/Receptionist/MenuPage.cshtml
+++ b/OasisFamiliarWebSite/Views/Receptionist/MenuPage.cshtml
@@ -65,7 +65,6 @@
 
     <div class="container">
 
-
         @{string title = ""; }
         @{string title_prev = ""; }
 
@@ -83,7 +82,14 @@
                     <hr />
                     <div class="col-xs-18 col-sm-6 col-md-4">
                         <div class="thumbnail">
-                            <img src="http://placehold.it/500x300" alt="">
+
+                            @{ string link;
+                                if (item.nombre_Producto != "")
+                                {
+                                    link = "../Content/img/Menu/" + item.nombre_Producto + ".jpg";
+                                }
+                                else { link = ""; } }
+                            <img src="@link" style="width:80px;" />
                             <div class="caption">
                                 <h4>@item.nombre_Producto</h4>
                                 <p>Cerveza Nacional... Precio: $ @item.Precio</p>
@@ -103,7 +109,13 @@
                     <div class="filterDiv @item.Tipo_Producto">
                         <div class="col-xs-18 col-sm-6 col-md-4">
                             <div class="thumbnail">
-                                <img src="http://placehold.it/500x300" alt="">
+                                @{ string link;
+                                    if (item.nombre_Producto != "")
+                                    {
+                                        link = "../Content/img/Menu/" + item.nombre_Producto + ".jpg";
+                                    }
+                                    else { link = ""; } }
+                                <img src="@link" style="width:80px;" />
                                 <div class="caption">
                                     <h4>@item.nombre_Producto</h4>
                                     <p>Cerveza Nacional... Precio: $ @item.Precio</p>
@@ -123,7 +135,14 @@
                         <hr />
                         <div class="col-xs-18 col-sm-6 col-md-4">
                             <div class="thumbnail">
-                                <img src="http://placehold.it/500x300" alt="">
+
+                                @{ string link;
+                                    if (item.nombre_Producto != "")
+                                    {
+                                        link = "../Content/img/Menu/" + item.nombre_Producto + ".jpg";
+                                    }
+                                    else { link = ""; } }
+                                <img src="@link" style="width:80px;" />
                                 <div class="caption">
                                     <h4>@item.nombre_Producto</h4>
                                     <p>Cerveza Nacional... Precio: $ @item.Precio</p>
@@ -139,6 +158,7 @@
         }
 
         @Html.Raw("</div>")  <!-- End row -->
+
 
     </div><!-- End container -->
     <!-- Fin del Contenido del menu -->
