--- a/OasisFamiliarWebSite/Views/Shared/_LayoutAdmin.cshtml
+++ b/OasisFamiliarWebSite/Views/Shared/_LayoutAdmin.cshtml
@@ -14,6 +14,9 @@
     @Scripts.Render("~/bundles/modernizr")
 
     <style>
+        .thumbnail > img {
+            width: 200px !important;
+        }
 
         .footer {
             position: fixed;
