--- a/OasisFamiliarWebSite/Views/Shared/_LayoutCustomer.cshtml
+++ b/OasisFamiliarWebSite/Views/Shared/_LayoutCustomer.cshtml
@@ -12,8 +12,12 @@
 
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-
+<a href="~/Views/Shared/_LayoutReceptionist.cshtml">~/Views/Shared/_LayoutReceptionist.cshtml</a>
     <style>
+
+        .thumbnail > img {
+            width : 200px !important;
+        }
 
         .footer {
             position: fixed;
