--- a/OasisFamiliarWebSite/Views/Customer/Index.cshtml
+++ b/OasisFamiliarWebSite/Views/Customer/Index.cshtml
@@ -16,7 +16,8 @@
         if (ViewBag.Data.EstadoCuenta == 0)
         {
             <p>No tiene cuenta abierta</p>
-            <button>Iniciar Orden</button>
+            <!--<button>Iniciar Orden</button>-->
+
         }
         else
         {
