--- a/OasisFamiliarWebSite/Views/Receptionist/Historial.cshtml
+++ b/OasisFamiliarWebSite/Views/Receptionist/Historial.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "Historial";
     Layout = "~/Views/Shared/_LayoutReceptionist.cshtml";
 }
@@ -8,60 +7,64 @@
 
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 
-<div class="container">
-    <div class="row">
+   
+   
+        <div class="container">
+            <div class="row">
 
-        <section class="content">
-            <div class="col-md-8 col-md-offset-2">
-                <div class="panel panel-default">
-                    <div class="panel-body">
+                <section class="content">
+                    <div class="col-md-8 col-md-offset-2">
+                        <div class="panel panel-default">
+                            <div class="panel-body">
 
-                        <div class="pull-right">
-                            <div class="btn-group" contextmenu="center">
-                                <button type="button" class="btn btn-success btn-filter" data-target="pagado">Pagado</button>
-                                <button type="button" class="btn btn-danger btn-filter" data-target="cancelado">Cancelado</button>
-                                <button type="button" class="btn btn-default btn-filter" data-target="all">Todos</button>
+                                <div class="pull-right">
+                                    <div class="btn-group" contextmenu="center">
+                                        <button type="button" class="btn btn-success btn-filter" data-target="pagado">Pagado</button>
+                                        <button type="button" class="btn btn-danger btn-filter" data-target="cancelado">Cancelado</button>
+                                        <button type="button" class="btn btn-default btn-filter" data-target="all">Todos</button>
+                                    </div>
+                                </div>
+
+                                <div class="table-container">
+                                    <table class="table table-filter">
+                                        <tbody>
+                                            <tr data-status="pagado">
+                                                
+                                            
+                                                <th scope="col">Mesa</th>
+                                                <th scope="col">Factura</th>
+                                                <th scope="col">Total</th>
+                                                <th scope="col">Usuario</th>
+                                            
+                                            </tr>
+
+                                            <tr data-status="cancelado">
+                                                <th scope="col">Mesa</th>
+                                                <th scope="col">Factura</th>
+                                                <th scope="col">Total</th>
+                                                <th scope="col">Usuario</th>
+
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+
                             </div>
                         </div>
-
-                        <div class="table-container">
-                            <table class="table table-filter">
-                                <tbody>
-                                    <tr data-status="pagado">
-                                        <td>
-                                            Factura Pagada
-                                        </td>
-                                    </tr>
-                                    
-                                    <tr data-status="cancelado">
-                                        <td>
-                                            factura cancelada
-                                        </td>
-
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-
                     </div>
-                </div>
+                </section>
+
             </div>
-        </section>
-
-    </div>
-</div>
-
+        </div>
+   
 <script>
     $(document).ready(function () {
-
         $('.star').on('click', function () {
             $(this).toggleClass('star-checked');
         });
-
         $('.ckbox label').on('click', function () {
             $(this).parents('tr').toggleClass('selected');
         });
-
         $('.btn-filter').on('click', function () {
             var $target = $(this).data('target');
             if ($target != 'all') {
@@ -71,8 +74,5 @@
                 $('.table tr').css('display', 'none').fadeIn('slow');
             }
         });
-
     });
-
 </script>
-
